pagewrap is black instead of body, fixed dropdown spacing issue

--- a/react-app/src/components/CSS/NavBar.css
+++ b/react-app/src/components/CSS/NavBar.css
@@ -118,10 +118,11 @@
 .NavBar_menu {
     position: absolute;
     top: 60px;
+
     width: 400px;
     z-index: 100;
     background-color: #141518;
-    margin-right: 250px;
+    margin-right: 180px;
 
 }
 
