--- a/react-app/src/components/CSS/SignUpForm.css
+++ b/react-app/src/components/CSS/SignUpForm.css
@@ -20,9 +20,9 @@
     margin-top: 30px;
 }
 
-body {
+/* body {
     background-color: black;
-}
+} */
 
 .SignUpForm_label {
     color: rgba(255, 255, 255, 0.8);
