--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -11,6 +11,8 @@ body {
 .pageWrap {
     position: relative;
     min-height: 100vh;
+    background-color: black;
+    z-index: 1
 }
 
 .paddingLoad {
